--- a/Feltöltés.html
+++ b/Feltöltés.html
@@ -30,7 +30,7 @@
         <input type="text" id="elerhetoseg" placeholder="Elérhetőség" name="elerhetoseg" required>
         <input type="text" id="szin" placeholder="Szín" name="szin" required>
         <input type="file" id="kep" name="kép" accept="image/*">
-        <input type="button" id="bekuld" name="bekuld" value="Beküld">
+        <input type="submit" id="bekuld" name="bekuld" value="Beküld">
     </form>
     </div>
     <footer>
