--- a/Admin69420.html
+++ b/Admin69420.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="C:\Users\marti\Desktop\AutóKölcs\SzerverOldaliBeadando-main\collapsible.ccs">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="adminstyle.css">
     <script src="adminsearch-bar.js" defer></script>
     <link rel="stylesheet" href="TermekGridview.css">
     <script src="sticky-header.js" defer></script>
